<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cofc.edu.yipyap.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/howto"
        android:text="@string/how_to_play"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:padding="5pt"

        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:layout_marginBottom="17dp"
        android:layout_above="@+id/records"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/records"
        android:text="@string/records"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:padding="5pt"
        android:layout_marginBottom="13dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start"
        android:text="@string/start_game"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:padding="5pt"
        android:layout_marginBottom="17dp"
        android:layout_above="@+id/howto"
        android:layout_alignStart="@+id/howto" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/yipyap"
        android:layout_above="@+id/start"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp" />
</RelativeLayout>
